FEATURE | Adicionado contador a acões na arvore (#11)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/arvores_db
 spring.datasource.username=capivara
 spring.datasource.password=capivara
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
